# mailing_list_sending_service_1

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixture/: groups.json
mailing/: admin.py  cron.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_a_newsletter.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: attempt_list.html  base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home_page.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_done.html  password_reset.html  user_form.html  user_list.html  user_update.html
