[tool.poetry]
name = "mailing-list-sending-service"
version = "0.1.0"
description = ""
authors = ["CHAPAPOPA <yackow.muliawin2015@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg-binary = "^3.1.19"
django-crontab = "^0.7.1"
pytz = "^2024.1"
psycopg = "^3.1.19"
redis = "^5.0.6"
pillow = "^10.3.0"
django-phonenumber-field = "^8.0.0"
django-phonenumbers = "^1.0.1"
psycopg2-binary = "^2.9.9"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
